# SRO-R_LAUNCHER

./: AfxStringMgr.cpp  AfxStringMgr.h  BSClientApp.cpp  BSClientApp.h  BSClientDlg.cpp  BSClientDlg.h  CClientProcess.cpp  CClientProcess.h  CMakeLists.txt  DLLMain.cpp  DivisonManager.cpp  DivisonManager.h  Lib.cpp  Lib.h  SingletonT.h  TextStringManager.cpp  TextStringManager.h  afxmsg_custom.h
Controls/: Agreement.cpp  Agreement.h  DivisionWindow.cpp  DivisionWindow.h  DlgHoverButton.cpp  DlgHoverButton.h  ImgScrollBar.cpp  ImgScrollBar.h  ImgStaticWnd.cpp  ImgStaticWnd.h
libs/: CMakeLists.txt
libs/ClientNet/: CMakeLists.txt
libs/ClientNet/src/ClientNet/: BSNet.h  ClientNet.cpp  ClientNet.h  IClientNet.h  Msg.cpp  Msg.h  NetEngine.cpp  NetEngine.h
libs/JMX_Library/GFX/: CMakeLists.txt
libs/JMX_Library/GFX/include/GFXFM/: AutoFileManager.h  DialogData.h  IFileManager.h  result_entry_t.h  searchresult.h
libs/JMX_Library/GFX/src/: IFileManager.cpp
memory/: hook.cpp  hook.h
